--- a/src/main/resources/templates/plan/calendar.html
+++ b/src/main/resources/templates/plan/calendar.html
@@ -27,15 +27,19 @@
 
 
     <style>
-        i.bi.bi-calendar {
-            position: absolute;
-            top: 14px;
-        }
-        #fa-1 {
-            left: calc(50% - 40px);
+        /*기본 제공 아이콘 숨기기*/
+        input[type="date"]::-webkit-calendar-picker-indicator {
+            display: none;
         }
 
-        #fa-2 {
+        i.bi.bi-calendar {
+            position: absolute;
+            top: 10px;
+        }
+        .fa-1 {
+            left: calc(50% - 40px);
+        }
+        .fa-2 {
             left: calc(100% - 40px);
         }
         input {
@@ -203,7 +207,9 @@
                         <div class="col-sm-9 col-12 px-0 mb-2">
                             <div class="input-group input-daterange">
                                 <input id="startDate2" name="startDate" type="date" class="form-control" placeholder="Arriving Date">
+                                <i class="bi bi-calendar fa-1"></i>
                                 <input id="endDate2" name="endDate" type="date" class="form-control" placeholder="Leaving Date">
+                                <i class="bi bi-calendar fa-2"></i>
                             </div>
                         </div>
                         <div class="col-sm-3 col-12 px-0">
@@ -305,10 +311,10 @@
                 <div class="flex-sm-row flex-column d-flex">
                     <div class="col-sm-9 col-12 px-0 mb-2">
                         <div class="input-group input-daterange">
-                            <input id="startDate" name="startDate" type="date" class="form-control" placeholder="Arriving Date" onchange="test()">
-                            <i class="bi bi-calendar" id="fa-1"></i>
-                            <input id="endDate" name="endDate" type="date" class="form-control" placeholder="Leaving Date" onchange="test()">
-                            <i class="bi bi-calendar" id="fa-2"></i>
+                            <input id="startDate" name="startDate" type="date" class="form-control" placeholder="Arriving Date">
+                            <i class="bi bi-calendar fa-1"></i>
+                            <input id="endDate" name="endDate" type="date" class="form-control" placeholder="Leaving Date">
+                            <i class="bi bi-calendar fa-2"></i>
                         </div>
                     </div>
                     <div class="col-sm-3 col-12 px-0">
@@ -320,17 +326,42 @@
     </div>
 </div>
     <script>
-        // datepicker 설정
         $(document).ready(function(){
-            $('.input-daterange').datepicker({
-                format: 'yyyy-mm-dd',
-                todayHighlight: true,
-                autoclose: true,
-                startDate: '0d',
-                language: "ko"
+            // input-daterange 클래스를 가진 요소를 선택하여 초기화
+            $('.input-daterange').each(function() {
+                var startDatePicker = $(this).find('input[name="startDate"]');
+                var endDatePicker = $(this).find('input[name="endDate"]');
+
+                // DatePicker 초기화
+                $(this).datepicker({
+                    format: 'yyyy-mm-dd',
+                    todayHighlight: true,
+                    autoclose: true,
+                    startDate: '0d',
+                    language: "ko"
+                }).on('changeDate', function(e) {
+                    checkDate();
+                });
+
+                // 날짜 간격을 확인하는 함수
+                function checkDate() {
+                    var startDate = new Date(startDatePicker.val());
+                    var endDate = new Date(endDatePicker.val());
+
+                    if (!startDate || !endDate) {
+                        return; // 하나라도 선택되지 않은 경우 함수 종료
+                    }
+
+                    var diff = endDate - startDate;
+                    var days = diff / (1000 * 60 * 60 * 24);
+
+                    if (days > 9) {
+                        alert("여행 일자는 최대 10일까지 설정 가능합니다.");
+                        endDatePicker.val('');
+                    }
+                }
             });
         });
-
     </script>
 
 </body>
